--- a/CSSfiles/Index.css
+++ b/CSSfiles/Index.css
@@ -1,5 +1,10 @@
 :root{
-	--transition:0s;
+	--background-color: rgb(233, 227, 227);
+	--text-color: black;
+	--tab-background:#f1f1f1;
+	--tab-hover:#ddd;
+	--tab-active:#ccc;
+	--transition: 0s;
 }
 [data-theme="light"] {
 	--background-color: rgb(233, 227, 227);
@@ -7,7 +12,7 @@
 	--tab-background:#f1f1f1;
 	--tab-hover:#ddd;
 	--tab-active:#ccc;
-	--transition: .5s;
+	--transition: 0.5s;
 }
 [data-theme="dark"] {
 	--background-color: rgba(24, 21, 21, 0.74);    
@@ -15,7 +20,7 @@
 	--tab-background:rgba(104, 101, 101, 0.74);
 	--tab-hover:rgba(131, 113, 113, 0.74);
 	--tab-active:rgba(48, 46, 46, 0.74);
-	--transition: .5s;
+	--transition: 0.5s;
 }
 body {
 	background: var(--background-color);
